--- a/static/style.css
+++ b/static/style.css
@@ -94,6 +94,7 @@ p {
     background-color: rgba(0, 0, 0, 0.9) !important;
 }
 
+
 /* Rocket Icon Animation */
 .rocket-icon {
     position: absolute;
@@ -108,14 +109,21 @@ p {
 @keyframes rocketLaunch {
     0% {
         bottom: 0;
+        left: 50%;
         opacity: 1;
+        transform: translateX(-50%);
     }
     50% {
         bottom: 50vh;
+        left: 50%;
         opacity: 0.8;
+        transform: translateX(-50%);
     }
     100% {
-        bottom: 100vh;
+        bottom: -10vh;
+        left: 100%;
         opacity: 0;
+        transform: translateX(0);
     }
 }
+      
