--- a/static/style.css
+++ b/static/style.css
@@ -94,7 +94,6 @@ p {
     background-color: rgba(0, 0, 0, 0.9) !important;
 }
 
-
 /* Rocket Icon Animation */
 .rocket-icon {
     position: absolute;
@@ -115,9 +114,9 @@ p {
     }
     50% {
         bottom: 50vh;
-        left: 50%;
+        left: 70%;
         opacity: 0.8;
-        transform: translateX(-50%);
+        transform: translateX(0);
     }
     100% {
         bottom: -10vh;
@@ -126,4 +125,3 @@ p {
         transform: translateX(0);
     }
 }
-      
