--- a/templates/index.html
+++ b/templates/index.html
@@ -34,9 +34,9 @@
       <p class="mb-0" style="font-size:1.1rem; line-height:1.6; font-weight: 500;">
         <span style="font-size:1.3rem; vertical-align:middle;">🛳️</span>
         <span>
-          Experience a <span style="color:#ff6f61; font-weight:bold;">beautifully styled</span> Flask app, 
-          <span style="color:#4caf50; font-weight:bold;">containerized with Docker</span> and 
-          <span style="color:#2196f3; font-weight:bold;">effortlessly deployed on Minikube</span>.
+          Experience a <span class="colored-text" style="color:#ff6f61; font-weight:bold;">beautifully styled</span> Flask app, 
+          <span class="colored-text" style="color:#4caf50; font-weight:bold;">containerized with Docker</span> and 
+          <span class="colored-text" style="color:#2196f3; font-weight:bold;">effortlessly deployed on Minikube</span>.
         </span>
       </p>
     </div>
